# dnsquest

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
dnsquest/: __init__.py  __main__.py  resolver.py
tests/: test_dnsquest.py
